--- a/index.html
+++ b/index.html
@@ -679,9 +679,10 @@ const fechaStr = toStrDateTime(
 
       // ---- Métricas por zona (N, N-1, etc.) y push al resultado
      // ---- Métricas por zona (N, N-1, etc.) y push al resultado
+// ---- Métricas por zona (N, N-1, etc.) y push al resultado
 Object.entries(zoneGroups).forEach(([zona, casos]) => {
-  // Conteos por día/OT
-  const seenOTperDay = new Map(); // day -> Set(OT)
+  // Conteos por día/OT (hoy, ayer, etc.)
+  const seenOTperDay = new Map(); // dayEpoch -> Set(OT)
   casos.forEach(c => {
     const dt = parseDate(c.fechaCreacion); if (!dt) return;
     const dk = toDayKey(dt);
@@ -701,7 +702,7 @@ Object.entries(zoneGroups).forEach(([zona, casos]) => {
   // Up/Down (si cargaste nodos)
   const nodo = nodesByZone.get(String(zona).toUpperCase()) || { up: 0, down: 0 };
 
-  // === Diagnósticos por zona ===
+  // === Diagnósticos por zona (todas las categorías) ===
   const diagnosticMap = new Map();    // category -> {count, cases[], color, icon, severity, category}
   const dailyDiagnostics = new Map(); // dayEpoch -> Map(category -> count)
 
@@ -709,12 +710,10 @@ Object.entries(zoneGroups).forEach(([zona, casos]) => {
     const diag = c.diagnosticoTecnico || 'Sin diagnóstico';
     const cat  = categorizeDiagnostic(diag);
 
-    // total por categoría
     if (!diagnosticMap.has(cat.category)) diagnosticMap.set(cat.category, { count:0, cases:[], ...cat });
     const entry = diagnosticMap.get(cat.category);
     entry.count++; entry.cases.push(c);
 
-    // diario por categoría
     const dt = parseDate(c.fechaCreacion);
     const dayKey = dt ? toDayKey(dt) : null;
     if (dayKey != null){
@@ -724,31 +723,11 @@ Object.entries(zoneGroups).forEach(([zona, casos]) => {
     }
   });
 
-  const equipmentDamage = diagnosticMap.get('EQUIPMENT_DAMAGE')?.count || 0;
-  const damageRate = totalOTs ? ((equipmentDamage / totalOTs) * 100) : 0;
-  const climaticRisk = damageRate > 30 ? 'ALTO' : damageRate > 15 ? 'MEDIO' : 'BAJO';
+  // --- % CATEC por zona (sobre OTs únicas) ---
+  const otCATEC = new Set();
+  casos.forEach(c => {
+    const ot = c.nu
 
-  // Push final de la zona (sin mutar índices inexistentes)
-  result.zonas.push({
-    zona,
-    totalOTs,
-    diasConCasos,
-    ingresoN,
-    ingresoN1,
-    maxOTsEnUnDia,
-    nivelRiesgo,
-    territorio: (casos[0]?.territorio) || '',
-    cmsUp: Number(nodo.up || 0),
-    cmsDown: Number(nodo.down || 0),
-
-    // Diagnósticos
-    diagnosticos: Array.from(diagnosticMap.values()),
-    equipmentDamage,
-    damageRate: Number(damageRate.toFixed(1)),
-    climaticRisk,
-    dailyDiagnostics
-  });
-});
 
 // ordenar zonas: primero N/N-1, luego volumen
 result.zonas.sort((a,b) =>
@@ -1352,74 +1331,53 @@ function displayDiagnosticos(zonas) {
   const q = (document.getElementById('quickSearch')?.value || '').trim().toLowerCase();
   const arr = q ? zonas.filter(z => (z.zona||'').toLowerCase().includes(q)) : zonas;
 
-  const sortedZonas = arr.slice().sort((a,b) =>
-    (b.equipmentDamage||0) - (a.equipmentDamage||0) ||
-    (parseFloat(b.damageRate||0) - parseFloat(a.damageRate||0))
-  );
+  // Orden por total OTs y luego por suma de diagnósticos
+  const sorted = arr.slice().sort((a,b) => {
+    const ad = (a.diagnosticos||[]).reduce((s,d)=>s+(d.count||0),0);
+    const bd = (b.diagnosticos||[]).reduce((s,d)=>s+(d.count||0),0);
+    return (b.totalOTs - a.totalOTs) || (bd - ad);
+  });
 
   const head = `
     <thead>
       <tr>
         <th>Zona</th>
         <th>Total OTs</th>
-        <th>Equipos dañados</th>
-        <th>% daño</th>
-        <th>Riesgo climático</th>
-        <th>Distribución diagnósticos</th>
-        <th>Tendencia 7 días</th>
+        <th>Distribución por categoría</th>
+        <th>Ingresos 7d</th>
         <th>Acción</th>
       </tr>
     </thead>`;
 
-  const rows = sortedZonas.map(z => {
+  const rows = sorted.map(z => {
     const diags = z.diagnosticos || [];
     const maxCount = Math.max(1, ...diags.map(d => d.count||0));
-    const diagChart = diags.slice(0,4).map(d => {
-      const w = Math.max(8, (d.count / maxCount) * 60);
-      return `<div style="display:flex;align-items:center;gap:4px;margin:2px 0;">
-        <span style="font-size:10px;">${d.icon}</span>
+
+    const diagChart = diags.map(d => {
+      const w = Math.max(10, (d.count / maxCount) * 80);
+      return `<div style="display:flex;align-items:center;gap:6px;margin:3px 0;">
+        <span style="font-size:11px;">${d.icon}</span>
+        <span style="font-size:11px;min-width:110px;color:#374151;">${d.category}</span>
         <div style="width:${w}px;height:12px;background:${d.color};border-radius:2px;" title="${d.category}: ${d.count}"></div>
-        <span style="font-size:10px;color:#6b7280;">${d.count}</span>
+        <span style="font-size:11px;color:#6b7280;">${d.count}</span>
       </div>`;
     }).join('');
 
-    const trend = buildDamageTrendChart(z.dailyDiagnostics);
-    const riskBadge = z.climaticRisk === 'ALTO'
-      ? '<span class="priority-badge priority-critica">ALTO RIESGO</span>'
-      : z.climaticRisk === 'MEDIO'
-        ? '<span class="priority-badge priority-alta">RIESGO MEDIO</span>'
-        : '<span class="priority-badge priority-baja">RIESGO BAJO</span>';
-
-    const rowClass = (z.climaticRisk === 'ALTO' && (z.equipmentDamage||0) > 5) ? ' class="row-critical-down"' : '';
     return `
-      <tr${rowClass}>
+      <tr>
         <td><strong>${z.zona}</strong></td>
         <td>${z.totalOTs}</td>
-        <td><strong style="color:#dc2626;">${z.equipmentDamage||0}</strong></td>
-        <td><strong>${z.damageRate||0}%</strong></td>
-        <td>${riskBadge}</td>
-        <td><div style="min-width:120px;">${diagChart}</div></td>
-        <td><div style="min-width:100px;">${trend}</div></td>
+        <td><div style="min-width:260px;">${diagChart || '<span style="color:#9ca3af;">Sin categorías</span>'}</div></td>
+        <td>${renderWeekBars(z.weekCounts||[])}</td>
         <td><button class="btn" onclick="openZoneModal('${z.zona.replace(/'/g,"&#39;")}')">🔍 Detalles</button></td>
       </tr>`;
   }).join('');
 
-  const totalEquipDamage = sortedZonas.reduce((s,z)=>s+(z.equipmentDamage||0),0);
-  const zonesAtRisk = sortedZonas.filter(z => z.climaticRisk === 'ALTO').length;
-
-  const summary = `
-    <div style="background:#fee2e2;border-left:4px solid #dc2626;padding:12px;margin:12px 0;border-radius:8px;">
-      <strong>⚡ Resumen de riesgo climático/eléctrico</strong><br>
-      • Total equipos dañados: <strong>${totalEquipDamage}</strong><br>
-      • Zonas en alto riesgo: <strong>${zonesAtRisk}</strong><br>
-      • Recomendación: ${zonesAtRisk>0 ? 'Revisar infraestructura eléctrica en zonas críticas' : 'Situación estable'}
-    </div>`;
-
   return `
-    <div class="preview-title">⚡ Análisis de Diagnósticos por Zona</div>
-    ${summary}
+    <div class="preview-title">⚡ Tipos de ingresos por zona</div>
     <div class="table-container"><table>${head}<tbody>${rows}</tbody></table></div>`;
 }
+
 
 function zoneMiniChartsHTML(zoneRows) {
   const { dayCounts, hourCounts } = zoneBuildTimeSeries(zoneRows);
