--- a/index.html
+++ b/index.html
@@ -419,132 +419,164 @@ function findHeaderRow(rows) {
     } catch(err){ showError('Error al leer Reporte B: ' + err.message); }
   }
 
-  function extractRowsFromWorkbook(workbook){
-    const sheetName = workbook.SheetNames[0];
-    const sheet = workbook.Sheets[sheetName];
-    if (!sheet) return [];
-    const jsonData = XLSX.utils.sheet_to_json(sheet, { header:1, defval:'', raw:true });
+function extractRowsFromWorkbook(workbook){
+  const sheetName = workbook.SheetNames[0];
+  const sheet = workbook.Sheets[sheetName];
+  if (!sheet) return [];
 
-    // buscar header (fila que contenga 'fecha' y 'zona')
-    let headerRow = -1;
-    for (let i=0;i<Math.min(50,jsonData.length);i++){
-      const row = jsonData[i]||[];
-      const rowStr = row.join(' ').toLowerCase();
-      if (rowStr.includes('fecha') && rowStr.includes('zona')) { headerRow = i; break; }
-    }
-    if (headerRow === -1) headerRow = 0;
+  // leemos crudo para conservar números y fechas tal cual
+  const jsonData = XLSX.utils.sheet_to_json(sheet, { header:1, defval:'', raw:true });
 
-    const headers = (jsonData[headerRow]||[]).map(h=>String(h||'').trim().toLowerCase());
-    const findCol = (cands) => {
-      for (const c of cands){
-        let idx = headers.findIndex(h => h===c);
-        if (idx!==-1) return idx;
-        idx = headers.findIndex(h => h.includes(c));
-        if (idx!==-1) return idx;
-      }
-      return -1;
-    };
-
-    const cFechaHora = findCol(['fecha/hora','fecha/hora de apertura','fecha y hora','fecha hora','fecha_hora','fechahora','fecha completa','datetime']);
-    const cFechaSolo = findCol(['fecha/hora','fecha/hora de apertura','fecha creación','fecha creacion','fecha','fecha alta']);
-    const cHora      = findCol(['hora','hora creación','hora creacion']);
-    const cZonaHFC = findCol(['zona tecnica hfc','zona hfc','zona hfc/cmts','zona hfc/nodo','zona']);
-    const cCalle   = findCol(['calle','direccion','dirección']);
-    const cTel     = findCol(['telefono','teléfono']);
-    const cCaso    = findCol(['numero de caso','nro caso','caso','id caso']);
-    const cOrden   = findCol(['numero de orden','nro orden','orden']);
-    const cEco     = findCol(['externalcaseid','eco','external case id']);
-    const cDiag    = findCol(['diagnostico tecnico','diagnóstico técnico','diagnostico','diagnóstico']);
-    const cCita    = findCol(['numero de cita','nro cita','cita','ot','sa']);
-    const cZonaFT  = findCol(['zona tecnica ftth','zona ftth']);
-    const cGlobal  = findCol(['globalidexttkt','global id ext tkt','global id']);
-    const cTrabajo = findCol(['tipo de trabajo','tipo trabajo','trabajo']);
-    const cEstado1 = findCol(['estado','estado 1','estado1']);
-    const cEstado2 = findCol(['estado 2','estado2']);
-    const cEstado3 = findCol(['estado 3','estado3']);
-    const cTerr    = findCol(['territorio','region','región']);
-    const cInfoDev = findCol(['info dispositivos','dispositivos','equipos','deviceinfo','info equipos']);
-
-    const rows = [];
-    const citas = new Set();
-
-    const fmt2 = (n)=>String(n).padStart(2,'0');
-    const toStrDateTime = (valFecha, valHora) => {
-      const fromAny = (v) => {
-        if (v instanceof Date) return v;
-        if (typeof v === 'number') {
-          const p = XLSX.SSF.parse_date_code(v);
-          if (p) return new Date(Date.UTC(p.y, p.m-1, p.d, p.H||0, p.M||0, p.S||0));
-          return null;
-        }
-        const s = String(v).trim().replace(',', ' ');
-        if (!s) return null;
-        if (/\d{1,2}\/\d{1,2}\/\d{2,4}[\s,]+\d{1,2}:\d{2}/.test(s)) return s;
-        const m = s.match(/^(\d{1,2})\/(\d{1,2})\/(\d{2,4})$/);
-        if (m) return new Date(Number(m[3].length===2?'20'+m[3]:m[3]), Number(m[2])-1, Number(m[1]));
-        return s;
-      };
-
-      let d = fromAny(valFecha);
-      let hh=0,mm=0;
-      if (valHora != null && valHora !== ''){
-        if (valHora instanceof Date){ hh=valHora.getHours(); mm=valHora.getMinutes(); }
-        else if (typeof valHora === 'number'){
-          const frac = valHora - Math.floor(valHora);
-          const totalMin = Math.round(frac*24*60);
-          hh = Math.floor(totalMin/60); mm = totalMin%60;
-        } else {
-          const hm = String(valHora).trim().match(/(\d{1,2}):(\d{2})/);
-          if (hm){ hh=Number(hm[1]); mm=Number(hm[2]); }
-        }
-      }
-
-      if (d instanceof Date && !isNaN(d.getTime())){
-        return `${fmt2(d.getDate())}/${fmt2(d.getMonth()+1)}/${d.getFullYear()} ${fmt2(hh)}:${fmt2(mm)}`;
-      }
-      if (typeof d === 'string'){
-        if (valHora && !/\d{1,2}:\d{2}/.test(d)) return `${d} ${fmt2(hh)}:${fmt2(mm)}`;
-        return d;
-      }
-      return '';
-    };
-
-    for (let i=headerRow+1; i<jsonData.length; i++){
-      const r = jsonData[i] || [];
-      const fechaStr = toStrDateTime(
-        (cFechaHora !== -1 ? r[cFechaHora] : (cFechaSolo !== -1 ? r[cFechaSolo] : (r[0]||''))),
-        (cHora !== -1 ? r[cHora] : '')
-      );
-      if (!fechaStr) continue;
-
-      const rowData = {
-        fechaCreacion: String(fechaStr),
-        zonaTecnicaHFC: cZonaHFC !== -1 ? (r[cZonaHFC] || '') : '',
-        calle:          cCalle   !== -1 ? (r[cCalle]   || '') : '',
-        telefono:       cTel     !== -1 ? (r[cTel]     || '') : '',
-        numeroCaso:     cCaso    !== -1 ? (r[cCaso]    || '') : '',
-        numeroOrden:    cOrden   !== -1 ? (r[cOrden]   || '') : '',
-        externalCaseId: cEco     !== -1 ? (r[cEco]     || '') : '',
-        diagnosticoTecnico: cDiag !== -1 ? (r[cDiag]   || '') : '',
-        numeroCita:     cCita    !== -1 ? (r[cCita]    || '') : '',
-        zonaTecnicaFTTH:cZonaFT  !== -1 ? (r[cZonaFT]  || '') : '',
-        globalIdExtTkt: cGlobal  !== -1 ? (r[cGlobal]  || '') : '',
-        tipoTrabajo:    cTrabajo !== -1 ? (r[cTrabajo] || '') : '',
-        estado1:        cEstado1 !== -1 ? (r[cEstado1] || '') : '',
-        estado2:        cEstado2 !== -1 ? (r[cEstado2] || '') : '',
-        estado3:        cEstado3 !== -1 ? (r[cEstado3] || '') : '',
-        territorio:     cTerr    !== -1 ? (r[cTerr]    || '') : '',
-        infoDispositivos: cInfoDev !== -1 ? (r[cInfoDev] || '') : ''
-      };
-
-      if (rowData.numeroCita){
-        if (!citas.has(rowData.numeroCita)) { citas.add(rowData.numeroCita); rows.push(rowData); }
-      } else if ((rowData.calle || '').trim() && (rowData.zonaTecnicaHFC || rowData.zonaTecnicaFTTH)){
-        rows.push(rowData);
+  // localizar encabezado (algo que tenga fecha y zona/node)
+  let headerRow = -1;
+  for (let i=0;i<Math.min(50,jsonData.length);i++){
+    const row = jsonData[i]||[];
+    const s = row.join(' ').toLowerCase();
+    if (s.includes('fecha') || s.includes('date')){
+      if (s.includes('zona') || s.includes('node') || s.includes('nodo')){
+        headerRow = i; break;
       }
     }
-    return rows;
   }
+  if (headerRow === -1) headerRow = 0;
+
+  const headers = (jsonData[headerRow]||[]).map(h => String(h||'').trim().toLowerCase());
+
+  const findCol = (cands) => {
+    for (const c of cands){
+      let idx = headers.findIndex(h => h === c);
+      if (idx !== -1) return idx;
+      idx = headers.findIndex(h => h.includes(c));
+      if (idx !== -1) return idx;
+    }
+    return -1;
+  };
+
+  // === columnas (A + B) ===
+  const cFechaHora   = findCol(['fecha/hora','fecha y hora','fecha hora','fecha_hora','fechahora','fecha completa','datetime','date']);
+  const cFechaSolo   = findCol(['fecha','fecha alta','fecha creación','fecha creacion','date','dia']);
+  const cHora        = findCol(['hora','hora creación','hora creacion','time']);
+
+  // ZONA / NODE: usamos el mismo campo interno
+  const cZonaHFC     = findCol(['zona tecnica hfc','zona hfc','zona hfc/cmts','zona hfc/nodo','zona','node','nodo']);
+
+  const cCalle       = findCol(['calle','direccion','dirección','streetname','street name']);
+  const cStreetNum   = findCol(['streetnum','street number','streetnumber','altura']);
+
+  // caso / orden / eco
+  const cCaso        = findCol(['numero de caso','nro caso','caso','id caso','workorderid','ticket']);
+  const cOrden       = findCol(['numero de orden','nro orden','orden','workid']);
+  const cEco         = findCol(['externalcaseid','eco','external case id']);
+
+  // varios
+  const cDiag        = findCol(['diagnostico tecnico','diagnóstico técnico','diagnostico','diagnóstico','diagnostic']);
+  const cCita        = findCol(['numero de cita','nro cita','cita','ot','sa']);
+  const cZonaFT      = findCol(['zona tecnica ftth','zona ftth']);
+  const cGlobal      = findCol(['globalidexttkt','global id ext tkt','global id']);
+  const cTrabajo     = findCol(['tipo de trabajo','tipo trabajo','trabajo','category','technology']);
+  const cEstado1     = findCol(['estado','estado 1','estado1']);
+  const cEstado2     = findCol(['estado 2','estado2']);
+  const cEstado3     = findCol(['estado 3','estado3']);
+  const cTerr        = findCol(['territorio','region','región','province','provincia']);
+  const cTel         = findCol(['telefono','teléfono','phonenum','phone','phonenumber']);
+  const cInfoDev     = findCol(['info dispositivos','dispositivos','equipos','deviceinfo','info equipos']);
+
+  // ¿parece el Reporte B (OPEN)?
+  const isReportB = headers.some(h => h.includes('workorderid') || h.includes('node') || h.includes('diagnostic'));
+
+  const rows = [];
+  const citas = new Set();
+
+  const fmt2 = (n)=>String(n).padStart(2,'0');
+  const toStrDateTime = (valFecha, valHora) => {
+    const fromAny = (v) => {
+      if (v instanceof Date) return v;
+      if (typeof v === 'number') {
+        const p = XLSX.SSF.parse_date_code(v);
+        if (p) return new Date(Date.UTC(p.y, p.m-1, p.d, p.H||0, p.M||0, p.S||0));
+        return null;
+      }
+      const s = String(v||'').trim().replace(',', ' ');
+      if (!s) return null;
+      if (/\d{1,2}\/\d{1,2}\/\d{2,4}[\s,]+\d{1,2}:\d{2}/.test(s)) return s;
+      const m = s.match(/^(\d{1,2})\/(\d{1,2})\/(\d{2,4})$/);
+      if (m) return new Date(Number(m[3].length===2?'20'+m[3]:m[3]), Number(m[2])-1, Number(m[1]));
+      return s;
+    };
+
+    let d = fromAny(valFecha);
+    let hh=0,mm=0;
+    if (valHora != null && valHora !== ''){
+      if (valHora instanceof Date){ hh=valHora.getHours(); mm=valHora.getMinutes(); }
+      else if (typeof valHora === 'number'){
+        const frac = valHora - Math.floor(valHora);
+        const totalMin = Math.round(frac*24*60);
+        hh = Math.floor(totalMin/60); mm = totalMin%60;
+      } else {
+        const hm = String(valHora).trim().match(/(\d{1,2}):(\d{2})/);
+        if (hm){ hh=Number(hm[1]); mm=Number(hm[2]); }
+      }
+    }
+
+    if (d instanceof Date && !isNaN(d.getTime())){
+      return `${fmt2(d.getDate())}/${fmt2(d.getMonth()+1)}/${d.getFullYear()} ${fmt2(hh)}:${fmt2(mm)}`;
+    }
+    if (typeof d === 'string'){
+      if (valHora && !/\d{1,2}:\d{2}/.test(d)) return `${d} ${fmt2(hh)}:${fmt2(mm)}`;
+      return d;
+    }
+    return '';
+  };
+
+  for (let i=headerRow+1; i<jsonData.length; i++){
+    const r = jsonData[i] || [];
+
+    const fechaStr = toStrDateTime(
+      (cFechaHora !== -1 ? r[cFechaHora] : (cFechaSolo !== -1 ? r[cFechaSolo] : (r[0]||''))),
+      (cHora !== -1 ? r[cHora] : '')
+    );
+    if (!fechaStr) continue;
+
+    // calle: si no viene "calle", usar STREETNAME + STREETNUM
+    const calleBase = cCalle !== -1 ? (r[cCalle] || '') : '';
+    const streetName = findCol(['streetname','street name']) !== -1 ? r[findCol(['streetname','street name'])] : '';
+    const streetNum  = cStreetNum !== -1 ? r[cStreetNum] : '';
+    const calleComb  = [streetName, streetNum].filter(v => String(v||'').trim() !== '').join(' ').trim();
+    const calleVal   = (calleBase || calleComb || '').toString();
+
+    const rowData = {
+      fechaCreacion: String(fechaStr),
+      // NODE del B entra por aquí
+      zonaTecnicaHFC: cZonaHFC !== -1 ? (r[cZonaHFC] || '') : '',
+      calle:          calleVal,
+      telefono:       cTel     !== -1 ? (r[cTel]     || '') : '',
+      // WORKORDERID/TICKET -> numeroCaso (id de OPEN)
+      numeroCaso:     cCaso    !== -1 ? (r[cCaso]    || '') : '',
+      numeroOrden:    cOrden   !== -1 ? (r[cOrden]   || '') : '',
+      externalCaseId: cEco     !== -1 ? (r[cEco]     || '') : '',
+      diagnosticoTecnico: cDiag !== -1 ? (r[cDiag]   || '') : '',
+      numeroCita:     cCita    !== -1 ? (r[cCita]    || '') : '',
+      zonaTecnicaFTTH:cZonaFT  !== -1 ? (r[cZonaFT]  || '') : '',
+      globalIdExtTkt: cGlobal  !== -1 ? (r[cGlobal]  || '') : '',
+      tipoTrabajo:    cTrabajo !== -1 ? (r[cTrabajo] || '') : '',
+      // Si es Reporte B y no vino estado, lo marcamos como OPEN
+      estado1:        cEstado1 !== -1 ? (r[cEstado1] || '') : (isReportB ? 'OPEN' : ''),
+      estado2:        cEstado2 !== -1 ? (r[cEstado2] || '') : '',
+      estado3:        cEstado3 !== -1 ? (r[cEstado3] || '') : '',
+      territorio:     cTerr    !== -1 ? (r[cTerr]    || '') : '',
+      infoDispositivos: cInfoDev !== -1 ? (r[cInfoDev] || '') : ''
+    };
+
+    // dedupe por OT si existe; sino por dirección + fecha, y sólo si hay zona
+    if (rowData.numeroCita){
+      if (!citas.has(rowData.numeroCita)) { citas.add(rowData.numeroCita); rows.push(rowData); }
+    } else if ((rowData.calle || '').trim() && (rowData.zonaTecnicaHFC || rowData.zonaTecnicaFTTH)){
+      rows.push(rowData);
+    }
+  }
+
+  return rows;
+}
 
   /* ========= MERGE y FILTROS ========= */
   function mergeDatasets(baseRows, otherRows){
